--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Aaaaaaa
+<!doctype html>
+<html>
+<head>
+	<title>Запорожець</title>
+	<link href="css/style.css" rel="stylesheet">
+</head>
+<body>
+	<div class="shafa">
+		<h1>Запорожець</h1>
+		<div class="polyca">
+			<div class="shuflada">
+				<h2>Запорожець 966</h2>
+				<div class="foto">
+					<img src="img/zaz966.jpg">
+					<div class="avtomini">
+						<img class="mini" src="img/zaz966.jpg">
+			  			<img class="mini" src="img/zaz966.jpg">
+						<img class="mini" src="img/zaz966.jpg">
+					</div>
+				</div>	
+				<p>1966 року була змінена конструкція впускного тракту та карбюратора і потужність при такому ж літражі була доведена до 30 к.с. При цьому вдалось вберегти взаємозамінність вузлів основних агрегатів. </p><p>Конструктори очікували, що при правильній експлуатації «Запорожця» пробіг 75 000 км до першого ремонту стане нормою.</p>				
+			</div>
+			<div class="shuflada">
+				<h2>Запорожець SENS</h2>
+				<div class="foto">
+					<img src="img/sens.jpg">
+					<div class="avtomini">
+						<img class="mini" src="img/sens.jpg">
+						<img class="mini" src="img/sens.jpg">
+						<img class="mini" src="img/sens.jpg">
+					</div>
+				</div>	
+				<p>1966 року була змінена конструкція впускного тракту та карбюратора і потужність при такому ж літражі була доведена до 30 к.с. При цьому вдалось вберегти взаємозамінність вузлів основних агрегатів. </p><p>Конструктори очікували, що при правильній експлуатації «Запорожця» пробіг 75 000 км до першого ремонту стане нормою.</p>		
+			</div>
+		</div>
+		<div class="polyca">
+			<div class="shuflada">
+				<h2>Запорожець VIDA</h2>
+				<div class="foto">
+					<img src="img/VIDA.jpg">
+					<div class="avtomini">
+						<img class="mini" src="img/VIDA.jpg">
+						<img class="mini" src="img/VIDA.jpg">
+						<img class="mini" src="img/VIDA.jpg">
+					</div>
+				</div>	
+				<p>1966 року була змінена конструкція впускного тракту та карбюратора і потужність при такому ж літражі була доведена до 30 к.с. При цьому вдалось вберегти взаємозамінність вузлів основних агрегатів. </p><p>Конструктори очікували, що при правильній експлуатації «Запорожця» пробіг 75 000 км до першого ремонту стане нормою.</p>		
+			</div>
+			<div class="shuflada">
+				<h2>Запорожець FORZA</h2>
+				<div class="foto">
+					<img src="img/FORZA.jpg">
+					<div class="avtomini">
+						<img class="mini" src="img/FORZA.jpg">
+						<img class="mini" src="img/FORZA.jpg">
+						<img class="mini" src="img/FORZA.jpg">
+					</div>
+				</div>	
+				<p>1966 року була змінена конструкція впускного тракту та карбюратора і потужність при такому ж літражі була доведена до 30 к.с. При цьому вдалось вберегти взаємозамінність вузлів основних агрегатів. </p><p>Конструктори очікували, що при правильній експлуатації «Запорожця» пробіг 75 000 км до першого ремонту стане нормою.</p>	
+			</div>
+		</div>
+		
+	</div>
+</body>
+</html>
