--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 			<div class="shuflada">
 				<h2>Запорожець VIDA</h2>
 				<div class="foto">
-					<img src="img/VIDA.jpg">
+					<img src="img/vida.jpg">
 					<div class="avtomini">
-						<img class="mini" src="img/VIDA.jpg">
-						<img class="mini" src="img/VIDA.jpg">
-						<img class="mini" src="img/VIDA.jpg">
+						<img class="mini" src="img/vida.jpg">
+						<img class="mini" src="img/vida.jpg">
+						<img class="mini" src="img/vida.jpg">
 					</div>
 				</div>	
 				<p>1966 року була змінена конструкція впускного тракту та карбюратора і потужність при такому ж літражі була доведена до 30 к.с. При цьому вдалось вберегти взаємозамінність вузлів основних агрегатів. </p><p>Конструктори очікували, що при правильній експлуатації «Запорожця» пробіг 75 000 км до першого ремонту стане нормою.</p>		
