add 4 docs, change svitlyny to tvorchist

--- a/museum74/activity.html
+++ b/museum74/activity.html
@@ -37,12 +37,24 @@
     <div id="activityCarousel" class="carousel slide" data-ride="carousel">
         
       </div>
-          <p>1998 року у приміщенні середньої загальноосвітньої школи №74 міста Львова засновано кімнату-музей Марійки Підгірянки. Профіль музею:літературний.
+          <p id="1998">1998 року у приміщенні середньої загальноосвітньої школи №74 міста Львова засновано кімнату-музей Марійки Підгірянки. Профіль музею:літературний.
           </p>
-          <p>Пошуково-дослідницька робота  проводилася з 1995 по 1998рр. вчителями та учнями школи під керівництвом ініціатора створення кімнати-музею учительки української мови і літератури Кучеренко Євгенії Маркіянівни, а також заступника директора Шкурпило Марії Григорівни і директора школи Юрківа Михайла Федоровича.
+          <p>Пошуково-дослідницька робота  проводилася з 1995 по 1998рр. вчителями та учнями школи під керівництвом ініціатора створення кімнати-музею учительки української мови і літератури 
+            <a id="kucherenko" href="#1998">Кучеренко Євгенії Маркіянівни<img class="floating"  src="img/4.jpg" width="300"></a>, 
+            а також заступника директора Шкурпило Марії Григорівни і директора школи Юрківа Михайла Федоровича.
           </p>
           <p id="activity">Сьогодні у кімнаті-музеї працює рада музею, що складається з учителів та учнів школи. Керівником кімнати-музею є Карбовник Ірина Адамівна.Учні – екскурсоводи проводять екскурсії для учнів початкової школи (від 15 до 30 хвилин) та школярів 5-6-х класів і усіх бажаючих ( 45-60 хвилин).
           </p>
+      </div>
+    </section>
+    <!-- BEGIN DOCUMENTS-ACTIVITY SECTION -->
+    <section id="documents" class="documents_section">
+      <div class="container documents_container">
+        <h3>Документи</h3>
+        <img src="img/doc-1.png" width="250">
+        <img src="img/doc-2.png" width="250">
+        <img src="img/doc-3.png" width="250">
+        <img src="img/doc-4.png" width="250">
       </div>
     </section>
     <!-- BEGIN EXPOSITION-ACTIVITY SECTION -->
@@ -50,7 +62,7 @@
       <div class="container activity_container">
         <div>
           <h3>Екскурсії</h3>
-	  <div>
+	        <div>
             <img src="img/35.jpg" width="600" data-toggle="tooltip" title="Діти проводять екскурсію">
           </div>
           <p>У кімнаті-музеї для учнів початкової школи (1-4 класи) проводять оглядові екскурсії, а для школярів
