--- a/museum74/galery.html
+++ b/museum74/galery.html
@@ -27,8 +27,8 @@
     <!-- BEGIN EXPOSITION-CHILD SECTION -->
     <section id="galery" class="galery_section pb-5">
       <div class="container expo_container">
-        <h2>Наша фотогалерея</h2>
-        <div>
+        <h2>Творчість Марійки-Підгірянки</h2>
+        <!-- <div>
           <img src="img/34.jpg" width="300">
           <img src="img/4.jpg" width="200">
         </div>
@@ -36,8 +36,7 @@
           <img src="img/2.jpg" width="300" data-toggle="popover" title="Експозиції" data-content="Експозиції музею розповідають про життєвий шлях поетеси">
           <img src="img/5.jpg" width="150" data-toggle="popover" title="Експозиції" data-content="Експозиції музею розповідають про життєвий шлях поетеси">
           <img src="img/55.jpg" width="120" data-toggle="popover" title="Наші співробітники" data-content="Юні співробітники музею">
-        </div>
-        <div>
+        </div> -->
           
       </div>
     </section>
