--- a/museum74/index.html
+++ b/museum74/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="activity.html#science">Наукова робота</a>
             </li>
           <li class="nav-item">
-            <a class="nav-link" href="galery.html">Світлини</a>
+            <a class="nav-link" href="galery.html">Творчість</a>
           </li>
         </ul>
       </div>
